<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.HomeActivity"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    >


    <RelativeLayout
        android:id="@+id/layout_background_explorer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true">

            <ImageView
                android:id="@+id/logo_wip"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:layout_constraintBottom_toTopOf="@+id/text_wip"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/icon_workinprogress" />

            <TextView
                android:id="@+id/text_wip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Work In Progress"
                android:textColor="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/list_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/courses"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_wip"
                android:onClick="goToList"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>

</LinearLayout>