...

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/list_courses"
        android:layout_width="match_parent"
        android:layout_height="1092dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="8dp"
...
